overflow bug fixed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-y: hidden;
 }
 
 :root {
@@ -63,8 +64,8 @@ body * {
 
 #switch {
     position: relative;
-    width: 64px;
-    height: 40px;
+    width: 108px;
+    height: 56px;
     margin: 4px auto;
 }
 
@@ -78,8 +79,8 @@ body * {
     position: absolute;
     left: 0;
     z-index: 1;
-    top: 30%;
-    transform: translateY(-50%);
+    top: 16%;
+    transform: translateX(calc(20px));
 
     animation: slide-back .3s;
 }
@@ -106,6 +107,10 @@ body * {
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 9999px;
+
+    position: absolute;
+    left: 20px;
+    top: calc(16% + 4px);
 }
 
 ul {
@@ -193,13 +198,13 @@ footer strong {
     }
 
     to {
-        left: 50%;
+        left: 32%;
     }
 }
 
 @keyframes slide-back {
     from {
-        left: 50%;
+        left: 32%;
     }
 
     to {
